# lottiemoji

./: LICENSE  README.md  notebook.ipynb  pyproject.toml
data/: lol.mov  sup.mov  wth.mov
