[tool.poetry]
name = "lottiemoji"
version = "0.1.0"
description = "How about animated Memoji in Lottie?"
authors = ["Egor Machnev <egorikhelp@gmail.com>"]
readme = "README.md"
keywords = ["lottie", "memoji"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
tqdm = "^4.66.5"
