[tool.poetry]
name = "memoji"
version = "0.2.0"
description = "Use Jupyter Notebook to turn animated Memoji into Lottie"
authors = ["Egor Machnev <egorikhelp@gmail.com>"]
readme = "README.md"
keywords = ["lottie", "memoji"]
package-mode = false

[tool.poetry.dependencies]
jupyter = "^1.1.1"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
python = "^3.12"
tqdm = "^4.66.5"
