[tool.poetry]
name = "memoji"
version = "0.3.0"
description = "Use Jupyter Notebook to turn animated Memoji into Lottie"
authors = ["Egor Machnev <egorikhelp@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["lottie", "memoji"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
